--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:np8+Y1TnUl2gmzrgsjNrRUeZvJ4kzonHALZqXZTFga4=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://roles.local
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=roles
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -57,3 +57,4 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+CHAT_GPT_KEY=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
