--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "openai-php/laravel": "^0.8.1",
         "spatie/laravel-permission": "^6.3"
     },
     "require-dev": {
